cmake_minimum_required(VERSION 3.9)
project(OperatingSystems C)

set(CMAKE_C_STANDARD 99)

add_executable(OperatingSystems p3150133-p3160026-auebsh.h p3150133-p3160026-auebsh-1.c p3150133-p3160026-auebsh-common.c p3150133-p3160026-auebsh-2.c p3150133-p3160026-auebsh-3.c p3150133-p310026-auebsh-4.c p3150133-p3160026-auebsh-5.c)